--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
+  "type": "commonjs",
+  "name": "set-assignee-reviewer-when-ready",
+  "version": "0.0.1",
   "private": true,
-  "description": "TypeScript template action",
-  "main": "lib/main.js",
+  "description": "A GitHub action to set assignee(s) or reviewer(s) when a PR has finished all checks.",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
-    "package": "ncc build --source-map --license licenses.txt",
+    "package": "ncc build src/main.ts --out dist --source-map --license licenses.txt",
     "test": "jest",
     "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
   },
+  "engines": {
+    "node": ">= 16"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/ChrisCarini/set-assignee-reviewer-when-ready.git"
   },
   "keywords": [
     "actions",
@@ -23,21 +27,28 @@
     "setup"
   ],
   "author": "",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
-    "@actions/core": "^1.6.0"
+    "@actions/core": "^1.6.0",
+    "@actions/github": "^5.0.3",
+    "@actions/http-client": "^2.0.1",
+    "@octokit/rest": "^19.0.3",
+    "node-fetch": "^3.2.9"
   },
   "devDependencies": {
-    "@types/node": "^16.10.5",
+    "@types/node": "^18.0.6",
     "@typescript-eslint/parser": "^5.8.1",
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^7.32.0",
+    "@vercel/ncc": "^0.34.0",
+    "eslint": "^8.0.1",
     "eslint-plugin-github": "^4.3.2",
-    "eslint-plugin-jest": "^25.3.2",
-    "jest": "^27.2.5",
+    "eslint-plugin-jest": "^26.6.0",
+    "jest": "^28.1.3",
     "js-yaml": "^4.1.0",
-    "prettier": "2.5.1",
-    "ts-jest": "^27.1.2",
+    "prettier": "2.7.1",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.4.4"
+  },
+  "volta": {
+    "node": "16.16.0"
   }
 }
