--- a/.github/workflows/dependabot-auto-merge-auto-approve.yml
+++ b/.github/workflows/dependabot-auto-merge-auto-approve.yml
@@ -18,7 +18,7 @@ jobs:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
 
       - name: "[Dependabot] Enable auto-merge for PR#${{github.event.pull_request.number}}"
-        run: gh pr merge --auto --merge "$PR_URL"
+        run: gh pr merge --auto --squash "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
