--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/checkout@v4
         if: ${{ github.event_name == 'pull_request' }}
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          # ref: ${{ github.event.pull_request.head.ref }}
+          # repository: ${{ github.event.pull_request.head.repo.full_name }}
           token: ${{ secrets.GH_PAT_REPO_WORKFLOW_SCOPE }}
 
       - name: Set Node.js 18.x
