--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -29,7 +29,7 @@ jobs:
           ref: ${{ github.head_ref }}
           # ref: ${{ github.event.pull_request.head.ref }}
           # repository: ${{ github.event.pull_request.head.repo.full_name }}
-          token: ${{ secrets.GH_PAT_REPO_WORKFLOW_SCOPE }}
+          # token: ${{ secrets.GH_PAT_REPO_WORKFLOW_SCOPE }}
 
       - name: Set Node.js 18.x
         uses: actions/setup-node@v4.1.0
@@ -55,9 +55,9 @@ jobs:
 
       - name: Push changes back to PR branch
         if: ${{ failure() && steps.diff.conclusion == 'failure' && github.event_name == 'pull_request' }}
-        run: |
-          git config --global user.email "6374067+ChrisCarini@users.noreply.github.com"
-          git config --global user.name "ChrisCarini"
+        run: |          
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add ./dist/
           git commit -m 'fixing dist'
           git push
