--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
     "@actions/http-client": "^2.2.3",
-    "@octokit/rest": "^21.1.0",
+    "@octokit/openapi-types": "^24.2.0",
+    "@octokit/rest": "^21.1.1",
     "node-fetch": "^3.2.9"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^4.2.0",
     "@types/node": "^22.13.10",
     "@typescript-eslint/parser": "^8.27.0",
     "@vercel/ncc": "^0.38.3",
