--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
   },
   "engines": {
-    "node": ">= 18"
+    "node": ">= 20"
   },
   "repository": {
     "type": "git",
@@ -32,23 +32,25 @@
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
     "@actions/http-client": "^2.2.3",
-    "@octokit/rest": "^21.1.0",
+    "@octokit/openapi-types": "^24.2.0",
+    "@octokit/rest": "^21.1.1",
     "node-fetch": "^3.2.9"
   },
   "devDependencies": {
-    "@types/node": "^22.10.8",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "@types/node": "^22.13.10",
+    "@typescript-eslint/parser": "^8.27.0",
     "@vercel/ncc": "^0.38.3",
     "eslint": "^9.19.0",
-    "eslint-plugin-github": "^5.1.5",
+    "eslint-plugin-github": "^6.0.0",
     "eslint-plugin-jest": "^28.11.0",
     "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
-    "prettier": "3.4.2",
+    "prettier": "3.5.3",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   },
   "volta": {
-    "node": "18.18.0"
+    "node": "20.19.0"
   }
 }
