--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -19,6 +19,10 @@ on:
 jobs:
   check-dist:
     runs-on: ubuntu-latest
+    
+    # https://stackoverflow.com/a/76645503
+    permissions:
+      contents: write
 
     steps:
       - uses: actions/checkout@v4
