--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -18,27 +18,26 @@ on:
 
 jobs:
   check-dist:
+    name: Check dist/
     runs-on: ubuntu-latest
-    
+
     # https://stackoverflow.com/a/76645503
     permissions:
       contents: write
 
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         if: ${{ github.event_name != 'pull_request' }}
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         if: ${{ github.event_name == 'pull_request' }}
         with:
           ref: ${{ github.head_ref }}
-          # ref: ${{ github.event.pull_request.head.ref }}
-          # repository: ${{ github.event.pull_request.head.repo.full_name }}
-          # token: ${{ secrets.GH_PAT_REPO_WORKFLOW_SCOPE }}
 
-      - name: Set Node.js 20.x
-        uses: actions/setup-node@v6.1.0
+      - name: Set Node.js
+        uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # v6.1.0
         with:
-          node-version: 20.x
+          node-version-file: .node-version
+          cache: npm
 
       - name: Install dependencies
         run: npm ci
@@ -59,7 +58,7 @@ jobs:
 
       - name: Push changes back to PR branch
         if: ${{ failure() && steps.diff.conclusion == 'failure' && github.event_name == 'pull_request' }}
-        run: |          
+        run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add ./dist/
@@ -67,7 +66,7 @@ jobs:
           git push
 
       # If index.js was different than expected, upload the expected version as an artifact
-      - uses: actions/upload-artifact@v6
+      - uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         if: ${{ failure() && steps.diff.conclusion == 'failure' }}
         with:
           name: dist
